--- a/style.css
+++ b/style.css
@@ -8,25 +8,41 @@ body {
 	font-family: Arial, 'Lucida Sans Unicode';
 	line-height: 1.5;
 	text-align: left;
+	animation-name: fade;
+    animation-duration: 1s;
+}
+
+
+
+/* Safari 4.0 - 8.0 */
+@-webkit-keyframes fade {
+    from {opacity: 0}
+    to {opacity: 1;}
+}
+
+/* Standard syntax */
+@keyframes fade {
+    from {opacity: 0}
+    to {opacity: 1;}
 }
 
 a {
 	text-decoration: none;
 }
 
-a:link, a:visited {
+/*a:link, a:visited {
 	color: #CF5C3F;
 
 }
 
-a:hover, a:active {
+a:hover, a:H {
 	background-color: #CF5C3F;
 	color: #FFF;
-}
+}*/
 
 .body {
 	margin: 0 auto;
-	width: 70%;
+	width: 78%;
 	clear: both; /*no floating*/
 }
 
@@ -55,16 +71,17 @@ a:hover, a:active {
 }
 
 .title p {
-	margin: 4.5% 0% 0% 13%;
+	margin: 4% 0% 0% 17%;
 }
 
 
 .mainHeader nav {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-	width: 40%;
+	width: 42.5%;
 	margin-top: 2%;
 	margin-bottom: 2%;
-	float: right;
+	margin-left: 1.25%;
+	float: left;
 	background-color: #666;
 	height: 40px;
 	border-radius: 5px;
@@ -222,11 +239,11 @@ a:hover, a:active {
     margin-left:5%;
     float:left;     /*on the same line*/
     visibility:hidden;
-    /*we need circles, not squares*/
-    border-bottom-left-radius:25px;
+    /* circles*/
+    /*border-bottom-left-radius:25px;
     border-top-left-radius:25px;
     border-bottom-right-radius:25px;
-    border-top-right-radius:25px;
+    border-top-right-radius:25px;*/
 }
 
 #SnavMiddle 
@@ -276,7 +293,7 @@ a:hover, a:active {
     display:block;
     background-color:rgba(0, 0, 0, 0.8);
     width:100%;
-    height:10%;
+    height:14%;
     position:absolute;
     bottom:0;
     left:0;
@@ -290,9 +307,29 @@ a:hover, a:active {
     bottom:0;
     left:0;
     margin-left:3%;
+    margin-bottom: 3%;
     visibility:hidden;
 }
 
+#home{
+	 margin-top: 2%;
+	 margin-left:95%;
+	 width: 40px;
+	 position:absolute;
+
+}
+
+
+
+.white-txt{
+	color: #fff; 
+
+}
+
+#home:hover{
+		 box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0), 0 6px 20px 0 rgba(0, 0, 0, 0);
+
+}
 /*home small size*/
 
 @media only screen and (min-width: 150px) and (max-width: 600px) {
@@ -330,7 +367,6 @@ a:hover, a:active {
 
 .content {
 	width: 100%;
-	
 }
 
 .top-sidebar, .middle-sidebar, .bottom-sidebar {
@@ -338,7 +374,6 @@ a:hover, a:active {
 	margin-left: 0%;
 	margin-top: 2%;
 	padding: 2% 3%;
-
 }
 
 .postinfo {
