--- a/style.css
+++ b/style.css
@@ -165,6 +165,9 @@ a:hover, a:H {
 	color:#666;
 }
 
+#demo {
+	font-size: 95.5%;
+}
 
 .mainHeader nav {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -503,6 +506,75 @@ margin-bottom:30px;
     height:15%;
     margin-top:10%;     
 }
+#imgs img 
+{
+    /*overlays all the imgs */
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    left:0;
+    transition: 1s;
+    visibility:hidden;
+}
+/*the container */
+#Snav 
+{
+    display:block;
+    width:100%;
+    height:100%;
+    position:absolute;
+    top:0;
+    left:0;
+}
+/* where the circles are going to be*/
+#SnavUp 
+{
+    display:block;
+    width:100%;
+    height:20%;
+}
+#Scircles 
+{
+    display:block;
+    width:5%;
+    height:15%;
+    margin-right:46%;
+    margin-top:2%;
+    /*float:right;*/        /* is going to be on the right side of the slider*/
+}
+#Scircles ul 
+{
+    margin:0;
+    float:right;
+    display:block;
+    width:100%;
+    height:100%;
+}
+#Scircles li
+{
+    list-style:none;
+    display:block;
+    background-color:rgba(0, 0, 0, 1);
+    width:25%;
+    height:90%;
+    margin-left:5%;
+    float:left;     /*on the same line*/
+    visibility:hidden;
+    /* circles*/
+    /*border-bottom-left-radius:25px;
+    border-top-left-radius:25px;
+    border-bottom-right-radius:25px;
+    border-top-right-radius:25px;*/
+}
+
+#SnavMiddle 
+{
+    display:block;
+    width:100%;
+    height:15%;
+    margin-top:10%;     
+}
 
 /*left button*/
 #Sleft 
@@ -518,22 +590,22 @@ margin-bottom:30px;
 #Sleft:hover 
 {
     opacity:0.8;
+    color: #7cc576;
 
 }
 
 #Sright 
 {
     width:8%;
-    height:100%;
     float:right;
-    margin-right:3%;
+    margin-right: -1.5%;
     opacity:0.8;
 }
 
 #Sright:hover 
 {
     opacity:0.8;
-   	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    color: #7cc576;
 
 }
 
@@ -556,15 +628,24 @@ margin-bottom:30px;
     bottom:0;
     left:0;
     margin-left:3%;
-    margin-bottom: 3%;
+    margin-bottom: 2%;
     visibility:hidden;
 }
 
 #home{
-	 margin-top: 2%;
+
+	color:#fff;
+    position:absolute;
+    bottom:0;
+    right:0;
+    float: right;
+    margin-right:3%;
+    margin-bottom: 2%;
+/*    visibility:hidden;
+*/	/* margin-top: 2%;
 	 margin-left:95%;
 	 width: 40px;
-	 position:absolute;
+	 position:absolute;*/
 
 }
 
