--- a/style.css
+++ b/style.css
@@ -229,6 +229,17 @@ a:hover, a:H {
 	margin-top: 2%;
 	margin-left: 10%;
 	margin-right: 5%;
+
+}
+
+.supportlogo {
+	-webkit-transition: -webkit-transform .5s ease-in-out;
+			transition: -webkit-transform .5s ease-in-out
+}
+
+.supportlogo:hover {
+	-webkit-transform: rotate(360deg);
+    		transform: rotate(360deg);
 }
 
 /*.time {
