--- a/style.css
+++ b/style.css
@@ -233,8 +233,14 @@ a:hover, a:H {
 }
 
 .supportlogo {
+	background-image:url("./images/s.png");
+	background-repeat: none;
+
+	width: 80%;
+	height: 255px;
+	margin:0 auto;
 	-webkit-transition: -webkit-transform .5s ease-in-out;
-			transition: -webkit-transform .5s ease-in-out
+			transition: -webkit-transform .5s ease-in-out;
 }
 
 .supportlogo:hover {
