--- a/style.css
+++ b/style.css
@@ -381,10 +381,19 @@ transition:all 0.3s ease-in-out;
 }
 
 .mainFooter p {
-	width: 92%;
+	width: 50%;
 	margin: 1% auto;
 	color: #FFF;
+	margin-left: 1.5%;
+	margin-top: 0.7%;
 
+}
+
+.scrollbackup {
+	margin-top: -3%;
+	margin-right: 2%;
+	color: #FFF;
+	float: right;
 }
 
 .arrow, .arrowup {
@@ -825,8 +834,19 @@ margin-bottom:30px;
 
 }
 
+.sl {
+	width: 100%;
 }
 
+.supportlogo {
+	
+	margin-left: -65%;
+
+	width: 250px;
+	
+}
+
+}
 
 
 
@@ -861,6 +881,14 @@ margin-bottom:30px;
 .searchbar, .tfnewsearch {
 		display: none;
 
+}
+
+.supportlogo {
+
+	margin-left: -10%;
+
+	width: 250px;
+	
 }
 
 }
